--- a/ui/OpenSopAddress.glade
+++ b/ui/OpenSopAddress.glade
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat Jan 17 07:33:10 2009 -->
+<!--Generated with glade3 3.4.5 on Sat Jan 17 10:35:42 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">350</property>
     <property name="visible">True</property>
+    <property name="title" translatable="yes">Open Custom Location - SopCast Player</property>
     <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
@@ -18,42 +19,12 @@
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
         <child>
-          <widget class="GtkHBox" id="hbox1">
-            <property name="visible">True</property>
-            <child>
-              <widget class="GtkLabel" id="label1">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;big&gt;&lt;b&gt;Channel Bookmark&lt;/b&gt;&lt;/big&gt;</property>
-                <property name="use_markup">True</property>
-              </widget>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="padding">9</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkLabel" id="label4">
-                <property name="visible">True</property>
-              </widget>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="padding">13</property>
-          </packing>
-        </child>
-        <child>
           <widget class="GtkHBox" id="hbox2">
             <property name="visible">True</property>
             <child>
               <widget class="GtkLabel" id="label2">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Name:</property>
+                <property name="label" translatable="yes">Sop Address:</property>
               </widget>
               <packing>
                 <property name="expand">False</property>
@@ -62,7 +33,7 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkEntry" id="channel_name">
+              <widget class="GtkEntry" id="sop_address">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
               </widget>
@@ -75,8 +46,7 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
-            <property name="padding">8</property>
-            <property name="position">1</property>
+            <property name="padding">15</property>
           </packing>
         </child>
         <child>
@@ -100,6 +70,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
+                <property name="padding">8</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -108,7 +79,6 @@
                 <property name="width_request">80</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="can_default">True</property>
                 <property name="receives_default">True</property>
                 <property name="label" translatable="yes">Done</property>
                 <property name="response_id">0</property>
@@ -117,7 +87,7 @@
               <packing>
                 <property name="expand">False</property>
                 <property name="fill">False</property>
-                <property name="padding">20</property>
+                <property name="padding">2</property>
                 <property name="position">2</property>
               </packing>
             </child>
@@ -125,8 +95,8 @@
           <packing>
             <property name="expand">False</property>
             <property name="fill">False</property>
-            <property name="padding">15</property>
-            <property name="position">2</property>
+            <property name="padding">6</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </widget>
