--- a/ui/pySopCast.glade
+++ b/ui/pySopCast.glade
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Feb  8 20:16:07 2009 -->
+<!--Generated with glade3 3.4.5 on Tue Feb 10 22:32:04 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
+    <property name="title" translatable="yes">SopCast Player</property>
     <property name="role">SopCast Player Main Screen</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="icon">television.png</property>
@@ -117,6 +118,13 @@
                       </widget>
                     </child>
                     <child>
+                      <widget class="GtkCheckMenuItem" id="menu_show_toolbar">
+                        <property name="label" translatable="yes">Show Toolbar</property>
+                        <property name="use_underline">True</property>
+                        <signal name="toggled" handler="on_menu_show_toolbar_toggled"/>
+                      </widget>
+                    </child>
+                    <child>
                       <widget class="GtkCheckMenuItem" id="menu_stay_on_top">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">Always On Top</property>
@@ -173,6 +181,55 @@
               <widget class="GtkVBox" id="media_box">
                 <property name="visible">True</property>
                 <child>
+                  <widget class="GtkToolbar" id="player_toolbar">
+                    <child>
+                      <widget class="GtkToolButton" id="toolbar_channel_guide">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Channel Guide</property>
+                        <property name="stock_id">gtk-open</property>
+                        <signal name="clicked" handler="on_toolbar_channel_guide_clicked"/>
+                      </widget>
+                      <packing>
+                        <property name="homogeneous">True</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkSeparatorToolItem" id="toolbutton1">
+                        <property name="visible">True</property>
+                      </widget>
+                      <packing>
+                        <property name="homogeneous">True</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkToolButton" id="toolbar_add_bookmark">
+                        <property name="visible">True</property>
+                        <property name="sensitive">False</property>
+                        <property name="label" translatable="yes">Bookmark</property>
+                        <property name="stock_id">gtk-add</property>
+                        <signal name="clicked" handler="on_toolbar_add_bookmark_clicked"/>
+                      </widget>
+                      <packing>
+                        <property name="homogeneous">True</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkToolButton" id="toolbar_fullscreen">
+                        <property name="visible">True</property>
+                        <property name="sensitive">False</property>
+                        <property name="stock_id">gtk-fullscreen</property>
+                        <signal name="clicked" handler="on_toolbar_fullscreen_clicked"/>
+                      </widget>
+                      <packing>
+                        <property name="homogeneous">True</property>
+                      </packing>
+                    </child>
+                  </widget>
+                  <packing>
+                    <property name="expand">False</property>
+                  </packing>
+                </child>
+                <child>
                   <widget class="GtkHBox" id="hbox1">
                     <property name="visible">True</property>
                     <child>
@@ -184,6 +241,9 @@
                       </widget>
                     </child>
                   </widget>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
                 </child>
                 <child>
                   <widget class="GtkHBox" id="media_controls">
@@ -294,7 +354,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="position">1</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </widget>
@@ -717,6 +777,7 @@
         <property name="visible">True</property>
         <property name="label" translatable="yes">Properties</property>
         <property name="use_underline">True</property>
+        <signal name="activate" handler="on_context_menu_properties_activate"/>
       </widget>
     </child>
   </widget>
