Updated to use make files created by Orcan Ogetbil <oget.fedora@gmail.com>. Thank you so much for your help.
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@153 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/ui/About.glade
+++ b/ui/About.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Tue Feb 10 21:03:27 2009 -->
+<!--Generated with glade3 3.4.5 on Mon Feb 16 18:52:33 2009 -->
 <glade-interface>
   <widget class="GtkAboutDialog" id="about">
     <property name="border_width">5</property>
@@ -23,7 +23,12 @@ SopCast Player is distributed in the hope that it will be useful, but WITHOUT AN
 You should have received a copy of the GNU General Public License along with SopCast Player; if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.</property>
     <property name="translator_credits" translatable="yes">王泽国 Wang Zeguo &lt;zak.zeguo.wang@gmail.com&gt;
 梁穗隆 Liang Suilong &lt;liangsuilong@gmail.com&gt;
-jjgomera</property>
+張兆柏 Paul Chang
+jjgomera
+Øyvind Munthe
+Vadim Peretokin &lt;vperetokin@gmail.com&gt;
+oriolsbd &lt;oriolsbd@yahoo.es&gt;
+Martin S. Weber</property>
     <property name="artists">Icon by famfamfam &lt;http://www.famfamfam.com/lab/icons/silk&gt;</property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
