--- a/ui/OpenSopAddress.glade
+++ b/ui/OpenSopAddress.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat Jan 17 10:35:42 2009 -->
+<!--Generated with glade3 3.4.5 on Sun Feb 22 14:58:25 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="window">
     <property name="width_request">350</property>
@@ -10,7 +10,7 @@
     <property name="modal">True</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="destroy_with_parent">True</property>
-    <property name="icon">television.png</property>
+    <property name="icon">sopcast-player.svg</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="skip_taskbar_hint">True</property>
     <property name="skip_pager_hint">True</property>
