--- a/ui/About.glade
+++ b/ui/About.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Feb 26 20:02:01 2009 -->
+<!--Generated with glade3 3.4.5 on Thu Mar 12 18:59:38 2009 -->
 <glade-interface>
   <widget class="GtkAboutDialog" id="about">
     <property name="border_width">5</property>
@@ -34,7 +34,10 @@ oriolsbd &lt;oriolsbd@yahoo.es&gt;
 Martin S. Weber
 joanmunoz
 komputes
-Dinth &lt;dinth@wikipasy.pl&gt;</property>
+Dinth &lt;dinth@wikipasy.pl&gt;
+anlag &lt;modellera@gmail.com&gt;
+NukieAndroiD &lt;luizfelipph@gmail.com&gt;
+stefanwilkens &lt;stefanwilkens@gmail.com&gt;</property>
     <property name="artists"></property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
