Fixed a couple of long over-due critical bugs. First is to get rid of the magic number issue when launching SopCast Player. The other critical bug relates to the inability to update the channel guide, had to switch from utf-8 to unicode. The other major update is adding a bunch of additional translations. As always, thank you to all the individuals that took time out of their busy schedule to translate SopCast Player.
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@177 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/ui/About.glade
+++ b/ui/About.glade
@@ -1,18 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Mar 12 18:59:38 2009 -->
+<?xml version="1.0"?>
 <glade-interface>
+  <!-- interface-requires gtk+ 2.16 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkAboutDialog" id="about">
     <property name="border_width">5</property>
     <property name="title" translatable="yes">About SopCast Player</property>
     <property name="resizable">False</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
+    <property name="window_position">center-on-parent</property>
     <property name="icon">sopcast-player.svg</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <property name="program_name">SopCast Player</property>
     <property name="version">0.2.1</property>
-    <property name="copyright" translatable="yes">Copyright © 2009 Jason Scheunemann</property>
+    <property name="copyright" translatable="yes">Copyright &#xA9; 2009 Jason Scheunemann</property>
     <property name="comments" translatable="yes">A GUI front-end for SopCast</property>
     <property name="website">http://code.google.com/p/sopcast-player</property>
     <property name="website_label" translatable="yes">http://code.google.com/p/sopcast-player</property>
@@ -23,12 +23,12 @@ SopCast Player is distributed in the hope that it will be useful, but WITHOUT AN
 You should have received a copy of the GNU General Public License along with SopCast Player; if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.</property>
     <property name="authors">SopCast Player and associated libraries written by Jason Scheunemann &lt;jason.scheunemann@yahoo.com&gt;
 Makefile and supporting files written by Orcan Ogetbil &lt;oget.fedora@gmail.com&gt;
-Special thank you to 王泽国 Wang Zeguo &lt;zak.zeguo.wang@gmail.com&gt; for his tireless efforts</property>
-    <property name="translator_credits" translatable="yes">王泽国 Wang Zeguo &lt;zak.zeguo.wang@gmail.com&gt;
-梁穗隆 Liang Suilong &lt;liangsuilong@gmail.com&gt;
-張兆柏 Paul Chang
+Special thank you to &#x738B;&#x6CFD;&#x56FD; Wang Zeguo &lt;zak.zeguo.wang@gmail.com&gt; for his tireless efforts</property>
+    <property name="translator_credits" translatable="yes">&#x738B;&#x6CFD;&#x56FD; Wang Zeguo &lt;zak.zeguo.wang@gmail.com&gt;
+&#x6881;&#x7A57;&#x9686; Liang Suilong &lt;liangsuilong@gmail.com&gt;
+&#x5F35;&#x5146;&#x67CF; Paul Chang &lt;chunchengch@gmail.com&gt;
 jjgomera
-Øyvind Munthe
+&#xD8;yvind Munthe
 Vadim Peretokin &lt;vperetokin@gmail.com&gt;
 oriolsbd &lt;oriolsbd@yahoo.es&gt;
 Martin S. Weber
@@ -37,7 +37,18 @@ komputes
 Dinth &lt;dinth@wikipasy.pl&gt;
 anlag &lt;modellera@gmail.com&gt;
 NukieAndroiD &lt;luizfelipph@gmail.com&gt;
-stefanwilkens &lt;stefanwilkens@gmail.com&gt;</property>
+stefanwilkens &lt;stefanwilkens@gmail.com&gt;
+loukoumas
+Jani Kuhno &lt;j.kuhno@gmail.com&gt;
+Michael Gilad
+supervivid &lt;dave33bravo@yahoo.com.sg&gt;
+yngd
+Niels Peen &lt;niels.peen@gmail.com&gt;
+shai
+joni_meri
+Gayan C. Jayasinghe &lt;gayancj@yahoo.com&gt;
+Chet Thaphong &lt;chetth@gmail.com&gt;
+svv &lt;skrypnychuk@gmail.com&gt;</property>
     <property name="artists"></property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
@@ -50,11 +61,12 @@ stefanwilkens &lt;stefanwilkens@gmail.com&gt;</property>
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
