Added Arabic language support. Updated French and Polish translations.
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@184 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/ui/About.glade
+++ b/ui/About.glade
@@ -49,7 +49,10 @@ joni_meri
 Gayan C. Jayasinghe &lt;gayancj@yahoo.com&gt;
 Chet Thaphong &lt;chetth@gmail.com&gt;
 svv &lt;skrypnychuk@gmail.com&gt;
-Lodberg</property>
+Lodberg
+thifx &lt;thifx@o2.pl&gt;
+NaSH
+</property>
     <property name="artists"></property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
