--- a/ui/About.glade
+++ b/ui/About.glade
@@ -11,7 +11,7 @@
     <property name="type_hint">dialog</property>
     <property name="has_separator">False</property>
     <property name="program_name">SopCast Player</property>
-    <property name="version">0.3.0</property>
+    <property name="version">0.3.1</property>
     <property name="copyright" translatable="yes">Copyright &#xA9; 2009 Jason Scheunemann</property>
     <property name="comments" translatable="yes">A GUI front-end for SopCast</property>
     <property name="website">http://code.google.com/p/sopcast-player</property>
@@ -52,6 +52,11 @@ svv &lt;skrypnychuk@gmail.com&gt;
 Lodberg
 thifx &lt;thifx@o2.pl&gt;
 NaSH
+Istv&#xE1;n Papp
+Phoenix.bg
+Dan Telecan &lt;telecan_dan@yahoo.com&gt;
+Vilson Gjeci &lt;vilsongjeci@gmail.com&gt;
+
 </property>
     <property name="artists"></property>
     <property name="wrap_license">True</property>
