Added Czech and Serbian translations
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@245 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/ui/About.glade
+++ b/ui/About.glade
@@ -61,7 +61,29 @@ Ragz
 Mantas Kriaučiūnas &lt;mantas@akl.lt&gt;
 zeugma
 keko &lt;keko.gl@gmail.com&gt;
-Josu Orbe</property>
+Josu Orbe
+Nguyen Duc Long &lt;longnd.s8@gmail.com&gt;
+Yaron &lt;sh.yaron@gmail.com&gt;
+Aron Xu &lt;happyaron.xu@gmail.com&gt;
+Westgaard
+Almufadado
+Klemes Raftopoulos &lt;krafto@windowslive.com&gt;
+Muhammad Heidir &lt;md.heidir@gmail.com&gt;
+Mircea &lt;tramir@hotmail.com&gt;
+moumny
+mE
+Kytos
+Richard Somlói &lt;level@somloirichard.hu&gt;
+Atalanttore &lt;atalanttore@googlemail.com&gt;
+Rodrigo Job
+abuyop
+Konki &lt;pavel.konkol@seznam.cz&gt;
+Jiri Grönroos
+Francesco Marzaro
+nanker
+Мирослав Николић &lt;miroslavnikolic@rocketmail.com&gt;
+CrabMan
+أبو همام &lt;xx1429xx@hotmail.com&gt;</property>
     <property name="wrap_license">True</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
